Busy with code coverage
Added Flows

Not reproting or showing the site under Target (Because therer is no unit tests yet)

//Todo:
Started with How to unit test MVC 7:30
Busy with edits in the AccountTypeController.java class.
Need to create a modifyAccountTypeFlow

Created UserAccount.java and UserAccountDto.java in the domain
Finished UserAccount, need to finish UserAccountDto.java

In AccountTypeTranslatorImpl.java:
TODO: Remember to mark Updates, deletes and modifies with @Transaction